--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="shortcut icon" href="favicon.png" type="image/png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="NKO_Mods" content="НКО - команда товарищей, разрабатывающая моды на игру орион. Предлагаем вам посетить этот сайт, где вы сможете удобно скачать мод, узнать информацию по их установке а так же перейти на наши в соц сети для более удобного мониторинга новых обновлений.">
         <meta http-equiv="refresh" content="0;URL=categories/main/index.html"/>
     </head>
 
