--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <link rel="shortcut icon" href="favicon.png" type="image/png">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="НКО - команда товарищей, разрабатывающая моды на игру орион. Предлагаем вам посетить этот сайт, где вы сможете удобно скачать мод, узнать информацию по их установке а так же перейти на наши в соц сети для более удобного мониторинга новых обновлений.">
-        <meta name="title" content="Переадресация...">
-        <meta name="keywords" content="НКО, нко моды, нко, орион, осе, орион сандбокс, orion sandbox, orion sandbox enhanced, Неофициальный канал орион, термоядерный кабан, (пасхалка :) )">
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="НКО - команда товарищей, разрабатывающая моды на игру орион. Предлагаем вам посетить этот сайт, где вы сможете удобно скачать мод, узнать информацию по их установке а так же перейти на наши в соц сети для более удобного мониторинга новых обновлений."/>
+        <meta name="title" content="Переадресация..."/>
+        <meta name="keywords" content="НКО, нко моды, нко, орион, осе, орион сандбокс, orion sandbox, orion sandbox enhanced, Неофициальный канал орион"/>
         <meta http-equiv="refresh" content="0;URL=categories/main/index.html"/>
     </head>
 
