--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="shortcut icon" href="favicon.png" type="image/png">
         <meta charset="utf-8"/>
+        <meta name="yandex-verification" content="5a4d0abf0d2ec0db" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="description" content="НКО - команда товарищей, разрабатывающая моды на игру орион. Предлагаем вам посетить этот сайт, где вы сможете удобно скачать мод, узнать информацию по их установке а так же перейти на наши в соц сети для более удобного мониторинга новых обновлений."/>
         <meta name="title" content="Переадресация..."/>
